# bzl-w-cpp-templates

./: README.md  WORKSPACE
boardnet/: BUILD.bazel  bn_light.h  bn_rts.h
converter_lib/: BUILD  lightmappert.cpp  lightmappert.h  readme.txt  rtsmappert.cpp  rtsmappert.h
core_main/: BUILD.bazel  main.cpp
core_mapper/: BUILD  CoreMapper.cpp  CoreMapper.h  CoreMapperTest.cpp
core_mapper_iface/: BUILD.bazel  ICoreMapper.h
core_messages/: BUILD.bazel  Core.h  Light.h
core_messages/v16/: Core.h
core_ros/: BUILD.bazel  light_ros_mapper.cpp  light_ros_mapper.h  rts_ros_mapper.cpp  rts_ros_mapper.h
